[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.662745, 0.490196, 0.870588, 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 200.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -94.0
margin_right = 220.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectionPoints" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 231.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/SectionPoints"]
margin_right = 231.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Acertos"
align = 1
valign = 2

[node name="points" type="Label" parent="Panel/HBoxContainer/SectionPoints"]
margin_top = 87.0
margin_right = 231.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="SectionTimer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 235.0
margin_right = 467.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/SectionTimer"]
margin_right = 232.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Segundos"
align = 1
valign = 2

[node name="seconds" type="Label" parent="Panel/HBoxContainer/SectionTimer"]
margin_top = 87.0
margin_right = 232.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="SectionPairs" type="VBoxContainer" parent="Panel/HBoxContainer"]
visible = false
margin_left = 270.0
margin_right = 419.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/SectionPairs"]
margin_right = 149.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restantes"
align = 1
valign = 2

[node name="pairs" type="Label" parent="Panel/HBoxContainer/SectionPairs"]
margin_top = 49.0
margin_right = 149.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 313.0
margin_right = -30.0
margin_bottom = -296.0
columns = 6

[node name="SectionPairs2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -185.0
margin_right = 152.0
margin_bottom = -46.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Voltar" type="Button" parent="SectionPairs2"]
margin_top = 19.0
margin_right = 300.0
margin_bottom = 119.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Voltar"

[connection signal="pressed" from="SectionPairs2/Voltar" to="." method="_on_Voltar_pressed"]
